<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/baudRate"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/baudrate"
                android:textColor="#ffffff" />

            <Spinner
                android:id="@+id/baudRateValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/stopBit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/stopbits"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/stopBitValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dataBit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/databits"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/dataBitValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/parity"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.8"
                android:gravity="center|bottom"
                android:text="@string/parity"
                android:textColor="#ffffff" >
            </TextView>

            <Spinner
                android:id="@+id/parityValue"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="#0877A6"
                android:gravity="center_horizontal|center"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            >
            <TextView android:text="@string/flowcontrol"
                android:id="@+id/flowControl"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:gravity="center|bottom"
                android:layout_weight="1.8"
                android:textColor="#ffffff"
                >
            </TextView>

            <Spinner android:id="@+id/flowControlValue"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:inputType="none"
                android:background="#0877A6"
                android:layout_weight="1"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_sure"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="确认"
        />

</LinearLayout>







