<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_home_right_bacground_01"
    >
    <include
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.13"
        layout="@layout/item_of_left"
        />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.87"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            >
            <Button
                android:id="@+id/bt_back"
                android:layout_width="43dp"
                android:layout_height="19dp"
                android:background="@mipmap/back"
                android:layout_marginLeft="20dp"
                android:layout_centerVertical="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/even_page_tear"
                android:layout_centerInParent="true"
                style="@style/ActivityTitle"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/even_page_tear_postion"
                    style="@style/ActivityContent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    />

                <ImageView
                    android:id="@+id/iv_right04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/right"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_line_content_04"
                    style="@style/ActivityContent01"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_right04"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_home_right_line"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>